XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Duplicate_Converted__e.object
<CustomObject>
    <fields>
        <fullName>CRMfusionDBR101__Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Scenario_Id__c</fullName>
        <label>Scenario Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate Converted</label>
    <pluralLabel>Duplicates Converted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>